# gif_server

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.toml  justfile
public/: home.html  random_cat_gif.html  search_gif.html
src/: handlers.rs  main.rs  tenor.rs
src/handlers/: home.rs  random_cat_gif.rs  search_gif.rs
src/presentation/: html.rs
src/presentation/html/: constants.rs  home.rs  random_cat_gif.rs  search_gif.rs
src/presentation/html/tera/: source.rs
src/presentation/html/tera/source/: context.rs  templates.rs
src/presentation/html/tera/source/context/: random_cat_gif_context.rs  search_gif_context.rs
src/presentation/html/tera/source/templates/: tera_basic_template.rs
src/public/: home.html  random_cat_gif.html
src/representation/: html.rs
src/representation/html/: constants.rs  home.rs  random_cat_gif.rs  tera.rs
src/representation/html/tera/: random_cat_gif.rs  source.rs
src/representation/html/tera/source/: constants.rs  context.rs  templates.rs
src/representation/html/tera/source/context/: random_cat_gif_context.rs
src/representation/html/tera/source/templates/: random_cat_gif_template.rs
src/tenor/: queries.rs  types.rs
src/tenor/queries/: constants.rs  errors.rs  random_cat_gif.rs  search_gif.rs  types.rs
src/tenor/queries/types/: random_cat_gif.rs
src/tenor/types/: media_format.rs  results.rs
src/tenor/types/media_format/: gif.rs  mp4.rs  webp.rs
