[package]
name = "gif_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = {version = "1.39.2", features = ["macros", "rt-multi-thread", "signal", "fs"]}
redis = "0.26.1"
sqlx = "0.8.0"
bb8-redis = "0.16.0"

anyhow = "1.0.86"
serde = "1.0.208"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
bb8 = "0.8.5"
serde_json = "1.0.125"
reqwest = "0.12.5"
tera = "1.20.0"
