[package]
name = "gif_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = {version = "1.39", features = ["macros", "rt-multi-thread", "signal", "fs"]}

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
serde_json = "1.0"
reqwest = "0.12"
tera = "1.20"
thiserror = "1.0"
